--- a/giF0S_Project/Styles/Styles.css
+++ b/giF0S_Project/Styles/Styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0%;
   padding: 0%;
+  background-color: #faf1f9;
 }
 
 #title {
@@ -112,6 +113,19 @@ body {
   height: 24px;
 }
 
+#searchbox form #formSearch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 #searchbox form #mySearch {
   width: 88.08%;
   height: 48px;
@@ -148,6 +162,7 @@ body {
 
 #searchbox form #ButtonSearch {
   text-align: center;
+  margin-left: 8px;
   width: 8.5%;
   height: 36px;
   color: #B4B4B4;
